Fix: align text bug

--- a/src/pages/Resume/resume.scss
+++ b/src/pages/Resume/resume.scss
@@ -151,5 +151,9 @@ body {
       min-width: 100%;
       text-align: left;
     }
+    &__rigth-items {
+      text-align: justify;
+      text-justify: inter-word;
+    }
   }
 }
